--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 		{{ content }}
 
 		</div><!-- /.container -->
-		<footer>s
+		<footer>
     		<ul>
         		<li><a href="mailto:elinnert@gmail.com">email</a></li>
         		<li><a href="https://github.com/elinnert">github.com/elinnert</a></li>
